# batch_exec

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/: batch_exec__loops.h  batch_exec__utils.h
src/: CMakeLists.txt  batch_exec.c  batch_exec__loops.c  batch_exec__utils.c
tests/: CMakeLists.txt  test_batch_1.txt  test_batch_2.txt  test_batch_3.txt  test_batch_exec.c  test_utils.c  testfile1.txt  testfile2.txt
